--- a/Project Management Website/.firebaserc
+++ b/Project Management Website/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "gamers-chair"
-  }
+    "staging": "project-management-f232a",
+    "default": "project-management-f232a"
+  },
+  "targets": {}
 }
